// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ButtonWater Button Water Story 1`] = `
Array [
  <div
    className="sc-bdnxRM dNbdOK"
    onClick={[Function]}
    role="button"
    tabIndex={0}
    type="primary"
    width="-webkit-fill-available"
  >
    Ich habe gegossen!
  </div>,
  <p
    className="sc-gtsrHT hDlbRR sc-dlnjwi cVsRYp"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Wie kann ich mitmachen?",
      }
    }
    onClick={[Function]}
  />,
]
`;

exports[`Storyshots DataTable Default 1`] = `
<div
  className="sc-eCApnc emgArJ"
>
  <header
    className="sc-jSFjdj ddNIsG"
  >
    <h3
      className="sc-gKAaRy gzYXhA"
    >
      This is a title
    </h3>
  </header>
  <table
    className="sc-pNWdM bopamU"
  >
    <tbody>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle 1`] = `
<div
  className="sc-eCApnc emgArJ"
>
  <header
    className="sc-jSFjdj ddNIsG"
  >
    <h3
      className="sc-gKAaRy gzYXhA"
    >
      This is a title
    </h3>
    <h4
      className="sc-iCoGMd bqiyxU"
    >
      Subtitle
    </h4>
  </header>
  <table
    className="sc-pNWdM bopamU"
  >
    <tbody>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle And Children 1`] = `
<div
  className="sc-eCApnc emgArJ"
>
  <header
    className="sc-jSFjdj ddNIsG"
  >
    <h3
      className="sc-gKAaRy gzYXhA"
    >
      This is a title
    </h3>
    <h4
      className="sc-iCoGMd bqiyxU"
    >
      Subtitle
    </h4>
    <div
      className="sc-fujyAs ekEdtm"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-pNWdM bopamU"
  >
    <tbody>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable Without Subtitle And With Children 1`] = `
<div
  className="sc-eCApnc emgArJ"
>
  <header
    className="sc-jSFjdj ddNIsG"
  >
    <h3
      className="sc-gKAaRy gzYXhA"
    >
      This is a title
    </h3>
    <div
      className="sc-fujyAs ekEdtm"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-pNWdM bopamU"
  >
    <tbody>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-jrsJWt etzQyX"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Overlay Legend Story 1`] = `
<div
  className="sc-lmgQwP dcwmvE"
>
  <div
    className="sc-cxNHIi cDiUWR"
  >
    <div
      className="sc-iJCRrE fGuUXZ"
    >
      <div
        className="sc-iemWCZ kBlSUx"
      >
        <div
          className="sc-bkbkJK jRwavO"
        >
          <h2
            className="sc-kEqXSa lgoGae"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<b>Gieß den <span>Kiez</span></b>",
              }
            }
            size="xxl"
          />
          <div
            className="sc-iqAclL ipPqhc"
          >
            <img
              className="sc-crzoAE gTUVbe"
              src="/images/icon-trees.svg"
            />
          </div>
          <div
            className="sc-dIsUp gfhEOd"
          >
            <span>
              BETA
            </span>
          </div>
        </div>
        <h2
          className="sc-kEqXSa lgoGae"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Die Berliner Stadtbäume leiden unter Trockenheit <br class=\\"large\\" /> und Du kannst ihnen helfen!",
            }
          }
          size="xxl"
        />
        
        <div
          className="sc-hBMUJo cmptOk"
        >
          <p
            className="sc-bqGGPW cANqry sc-ksluID fCSNcm"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Auf dieser Plattform kannst Du Dich über Bäume in deiner Nachbarschaft und ihren Wasserbedarf informieren. Du kannst einzelne Bäume adoptieren und markieren, wenn Du sie gegossen hast.",
              }
            }
            onClick={[Function]}
          />
          <p
            className="sc-bqGGPW cANqry sc-ksluID fCSNcm"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Informiere Dich ich über das richtige Gießen von Stadtbäumen. Wenn Du die Seite regelmäßig nutzen möchtest, solltest Du ein Konto erstellen. Die Karte kannst Du aber auch ohne Konto erkunden.",
              }
            }
            onClick={[Function]}
          />
        </div>
        <button
          aria-label="Leiste schließen"
          className="sc-fnVZcZ sc-fFSPTT khdDHm iGWDtU"
          onClick={[Function]}
          title="Leiste schließen"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
        <div
          className="sc-dIvrsQ cKJave"
        >
          <div
            className="sc-bdnxRM bTikzI"
            onClick={[Function]}
            role="button"
            tabIndex={0}
            type="primary"
            width="fit-content"
          >
            Los geht's
          </div>
          <div
            className="sc-bdnxRM jtmweW"
            onClick={[Function]}
            role="button"
            tabIndex={0}
            width="fit-content"
          >
            Konto anlegen / Einloggen
          </div>
        </div>
        <section
          aria-label="News und Updates"
          className="sc-hHEiqL dDTZHG"
        >
          <h2
            className="sc-kEqXSa fmufHY"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Hurray, das neue Baumkataster ist live!",
              }
            }
            size="xl"
          />
          <div />
          <div
            className="sc-hBMUJo cmptOk"
          >
            <p
              className="sc-bqGGPW cANqry sc-ksluID fCSNcm"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Auf Gieß den Kiez werden nun <strong>120.000 zusätzliche Stadtbäume</strong> angezeigt. Im Juni 2021 wurde das neue Baumkataster durch das GRIS der SenUVK veröffentlicht, das rund 120.000 Bäume mehr listet als das Baumkataster auf dem Jahr 2020. Dabei liegt die Anzahl der in 2020 gepflanzten Bäume nicht überdurchschnittlich hoch.",
                }
              }
              onClick={[Function]}
            />
            <p
              className="sc-bqGGPW cANqry sc-ksluID fCSNcm"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Der Zuwachs ist vielmehr auf die vorbildliche Arbeit der bezirklichen Straßen- und Grünflächenämter zurückzuführen, die die Koordinaten weiterer Bäume erfasst haben. Von den rund 430.000 Straßenbäumen Berlins verfügen jetzt rund 404.000 über Koordinaten – das sind fast <strong>94% aller Straßenbäume</strong>.",
                }
              }
              onClick={[Function]}
            />
          </div>
        </section>
      </div>
      <div
        className="sc-iwajpm eTsxby"
      >
        <h2
          className="sc-kEqXSa fmufHY"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<b>Wie kann ich mitmachen?</b>",
            }
          }
        />
        <div
          className="sc-bCwfaz bTyAaX"
        >
          <div
            className="sc-dlMDgC fUHlRY"
          >
            <div
              className="sc-iqAclL ipPqhc"
            >
              <img
                className="sc-crzoAE gTUVbe"
                src="/images/icon-water.svg"
              />
            </div>
            <div
              className="sc-kfYoZR kVDWva"
            >
              <h2
                className="sc-fKgJPI iurCtN"
              >
                Bäume bewässern
              </h2>
              <p
                className="sc-gtsrHT hDlbRR"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Informiere Dich auf unserer Plattform, ob die Bäume in deiner Straße Wasser benötigen. Wenn ja, schnapp Dir eine Gießkanne, einen Eimer oder einen Schlauch und leg los. Danach trägst Du die Bewässerung hier ein.",
                  }
                }
                onClick={[Function]}
              />
            </div>
          </div>
          <div
            className="sc-dlMDgC fUHlRY"
          >
            <div
              className="sc-iqAclL ipPqhc"
            >
              <img
                className="sc-crzoAE gTUVbe"
                src="/images/icon-subscribe.svg"
              />
            </div>
            <div
              className="sc-kfYoZR kVDWva"
            >
              <h2
                className="sc-fKgJPI iurCtN"
              >
                Bäume adoptieren
              </h2>
              <p
                className="sc-gtsrHT hDlbRR"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Wenn Du regelmäßig die gleichen Bäume gießen willst, kannst Du sie adoptieren und so anzeigen, dass für sie gesorgt ist. So findet eine Koordinierung in der Nachbarschaft statt.",
                  }
                }
                onClick={[Function]}
              />
            </div>
          </div>
          <div
            className="sc-dlMDgC fUHlRY"
          >
            <div
              className="sc-iqAclL ipPqhc"
            >
              <img
                className="sc-crzoAE gTUVbe"
                src="/images/icon-zoom.svg"
              />
            </div>
            <div
              className="sc-kfYoZR kVDWva"
            >
              <h2
                className="sc-fKgJPI iurCtN"
              >
                Den Baumbestand erkunden
              </h2>
              <p
                className="sc-gtsrHT hDlbRR"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Unsere Karte ermöglicht es, mehr über einzelne Bäume und auch den gesamten Baumbestand zu erfahren. Nutze die Filter- und Suchfunktion, um mehr über die Bäume Berlins zu lernen.",
                  }
                }
                onClick={[Function]}
              />
            </div>
          </div>
          <div
            className="sc-dlMDgC fUHlRY"
          >
            <div
              className="sc-iqAclL ipPqhc"
            >
              <img
                className="sc-crzoAE gTUVbe"
                src="/images/icon-info.svg"
              />
            </div>
            <div
              className="sc-kfYoZR kVDWva"
            >
              <h2
                className="sc-fKgJPI iurCtN"
              >
                Mit anderen austauschen
              </h2>
              <p
                className="sc-gtsrHT hDlbRR"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Tritt unserem <a target=\\"_blank\\" href=\\"https://join.slack.com/t/giessdenkiez/shared_invite/zt-e3et281u-xON4UmBZpKavzDRkw5HmCQ\\">Slack-Kanal</a> bei, um Dich mit anderen User*innen auszutauschen und die Bewässerung von Bäumen in deinem Kiez zu koordinieren.",
                  }
                }
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots StackedBarChart Bar Chart 1`] = `
<div
  style={
    Object {
      "width": "310px",
    }
  }
>
  <div
    className="sc-dtLLSn lkOYgF"
    id="barchart"
  >
    <div
      className="sc-ikXwFM ToOWH"
      id="barchart-tooltip"
    >
      <span
        className="sc-uxdHp DPiRs"
      >
        <strong>
          <div
            className="sc-WZYut bRIhOA"
            style={
              Object {
                "backgroundColor": "#8B77F7",
              }
            }
          />
        </strong>
        <span
          id="barchart-tooltip-val-watered"
        />
      </span>
      <span
        className="sc-uxdHp DPiRs"
      >
        <strong>
          <div
            className="sc-WZYut bRIhOA"
            style={
              Object {
                "backgroundColor": "#75ADE8",
              }
            }
          />
        </strong>
        <span
          id="barchart-tooltip-val-rain"
        />
      </span>
      <span
        className="sc-uxdHp DPiRs"
      >
        <span
          className="sc-biJonm jUheKn"
        >
          ∑
        </span>
        <span
          id="barchart-tooltip-val-total"
        />
      </span>
    </div>
  </div>
  <div
    className="sc-dkQUaI jfOvTU"
  >
    <div>
      <div
        className="sc-WZYut bRIhOA"
        style={
          Object {
            "backgroundColor": "#8B77F7",
          }
        }
      />
      <div>
         Gießungen
      </div>
    </div>
    <div>
      <div
        className="sc-WZYut bRIhOA"
        style={
          Object {
            "backgroundColor": "#75ADE8",
          }
        }
      />
      <div>
         Regen
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots StackedBarChart Bar Chart February 1`] = `
<div
  style={
    Object {
      "width": "310px",
    }
  }
>
  <div
    className="sc-dtLLSn lkOYgF"
    id="barchart"
  >
    <div
      className="sc-ikXwFM ToOWH"
      id="barchart-tooltip"
    >
      <span
        className="sc-uxdHp DPiRs"
      >
        <strong>
          <div
            className="sc-WZYut bRIhOA"
            style={
              Object {
                "backgroundColor": "#8B77F7",
              }
            }
          />
        </strong>
        <span
          id="barchart-tooltip-val-watered"
        />
      </span>
      <span
        className="sc-uxdHp DPiRs"
      >
        <strong>
          <div
            className="sc-WZYut bRIhOA"
            style={
              Object {
                "backgroundColor": "#75ADE8",
              }
            }
          />
        </strong>
        <span
          id="barchart-tooltip-val-rain"
        />
      </span>
      <span
        className="sc-uxdHp DPiRs"
      >
        <span
          className="sc-biJonm jUheKn"
        >
          ∑
        </span>
        <span
          id="barchart-tooltip-val-total"
        />
      </span>
    </div>
  </div>
  <div
    className="sc-dkQUaI jfOvTU"
  >
    <div>
      <div
        className="sc-WZYut bRIhOA"
        style={
          Object {
            "backgroundColor": "#8B77F7",
          }
        }
      />
      <div>
         Gießungen
      </div>
    </div>
    <div>
      <div
        className="sc-WZYut bRIhOA"
        style={
          Object {
            "backgroundColor": "#75ADE8",
          }
        }
      />
      <div>
         Regen
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots StackedBarChart Bar Chart New Year 1`] = `
<div
  style={
    Object {
      "width": "310px",
    }
  }
>
  <div
    className="sc-dtLLSn lkOYgF"
    id="barchart"
  >
    <div
      className="sc-ikXwFM ToOWH"
      id="barchart-tooltip"
    >
      <span
        className="sc-uxdHp DPiRs"
      >
        <strong>
          <div
            className="sc-WZYut bRIhOA"
            style={
              Object {
                "backgroundColor": "#8B77F7",
              }
            }
          />
        </strong>
        <span
          id="barchart-tooltip-val-watered"
        />
      </span>
      <span
        className="sc-uxdHp DPiRs"
      >
        <strong>
          <div
            className="sc-WZYut bRIhOA"
            style={
              Object {
                "backgroundColor": "#75ADE8",
              }
            }
          />
        </strong>
        <span
          id="barchart-tooltip-val-rain"
        />
      </span>
      <span
        className="sc-uxdHp DPiRs"
      >
        <span
          className="sc-biJonm jUheKn"
        >
          ∑
        </span>
        <span
          id="barchart-tooltip-val-total"
        />
      </span>
    </div>
  </div>
  <div
    className="sc-dkQUaI jfOvTU"
  >
    <div>
      <div
        className="sc-WZYut bRIhOA"
        style={
          Object {
            "backgroundColor": "#8B77F7",
          }
        }
      />
      <div>
         Gießungen
      </div>
    </div>
    <div>
      <div
        className="sc-WZYut bRIhOA"
        style={
          Object {
            "backgroundColor": "#75ADE8",
          }
        }
      />
      <div>
         Regen
      </div>
    </div>
  </div>
</div>
`;
